syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.jaczerob.council.grpc.types";
option java_outer_classname = "CouncilProto";

service BroadcastChannelService {
  rpc GetBroadcastChannels (GetBroadcastChannelsRequest) returns (GetBroadcastChannelsResponse) {}
  rpc CreateBroadcastChannel (CreateBroadcastChannelRequest) returns (CreateBroadcastChannelResponse) {}
}

message GetBroadcastChannelsRequest {
  optional BroadcastChannelType type = 1;
}

message GetBroadcastChannelsResponse {
    repeated BroadcastChannel channels = 1;
}

message CreateBroadcastChannelRequest {
    int64 id = 1;
    BroadcastChannelType type = 2;
}

message CreateBroadcastChannelResponse {
    BroadcastChannel channel = 1;
}

message BroadcastChannel {
    int64 id = 1;
    BroadcastChannelType type = 2;
}

enum BroadcastChannelType {
  STATUS = 0;
  NEWS = 1;
  FIELDOFFICES = 2;
  DISTRICTS = 3;
  RELEASENOTES = 4;
}
